--- a/src/components/Exercises/Exercises.module.css
+++ b/src/components/Exercises/Exercises.module.css
@@ -1,165 +1,4 @@
-/* @keyframes fadeAnimation {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
 
-.fade-in {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.fade-in.active {
-    opacity: 1;
-}
-
-.stage-two-rom-wrapper {
-    max-width: 900px;
-    margin: 0 auto;
-    padding-bottom: 15px;
-}
-
-ul {
-    list-style: none;
-}
-
-.stage-two-rom-card {
-    color: #545454;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 22px;
-    padding-bottom: 15px;
-}
-
-.stage-two-rom-card-img-holder {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 330px;
-    padding-bottom: 20px;
-}
-
-.row {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.stage-two-rom-card-img-one,
-.stage-two-rom-card-img-two,
-.stage-two-rom-card-img-three,
-.stage-two-rom-card-img-four,
-.stage-two-rom-card-img-five {
-    width: 150px;
-    height: 150px;
-
-    margin: 4px 4px 6px 4px;
-    max-width: 47%;
-    object-fit: contain;
-    border-radius: 7px;
-    box-shadow: 5px 5px 10px #b9bbc4;
-}
-
-.stage-two-rom-card-titles-holder {
-    align-self: center;
-    width: 330px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.stage-two-rom-card-title {
-    padding-top: 20px;
-    padding-bottom: 10px;
-    font-size: 20px;
-}
-
-.stage-two-rom-card-subtitle {
-    font-size: 16px;
-}
-
-.stage-two-rom-card-preparartion-holder {
-    width: 330px;
-    height: auto;
-    background-color: #fff7f1;
-    border-radius: 7px;
-    box-shadow: 5px 5px 10px #b9bbc4;
-}
-
-.stage-two-rom-card-execution-holder {
-    width: 330px;
-    height: auto;
-    background-color: #fff7f1;
-    border-radius: 7px;
-    box-shadow: 5px 5px 10px #b9bbc4;
-}
-
-.stage-two-rom-card-execution-subtitle {
-    font-weight: 700;
-    padding-bottom: 5px;
-}
-
-.stage-two-rom-card-li {
-    text-align: left;
-    padding-bottom: 4px;
-}
-
-button {
-    background: transparent;
-}
-
-.arrow-container {
-    width: 350px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.arrow {
-    /* background: transparent; */
-    /* width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f361a7;
-} */
-
-
-
-/* .arrow-button.show {
-    opacity: 1;
-}
-
-.arrow-placeholder {
-    width: 100%;
-    height: 100%;
-} */
-
-/* .stage-two-rom-types-linkback {
-    text-decoration: none;
-    padding-right: 10px;
-    color: #f361a7;
-    font-weight: 500;
-    cursor: pointer;
-} */
-
-/* .next-page-str {
-    text-decoration: none;
-    padding-right: 10px;
-    padding-left: 10px;
-    color: #f361a7;
-    font-weight: 500;
-    cursor: pointer;
-}  */
-
-/* NEW  */
 
 .stage-exercises-container {
     max-width: 900px;
