--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,12 +1,9 @@
 .footer {
     max-width: 900px;
     margin: 0 auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 10px;
     text-align: center;
     background-color: transparent;
 }
 
-.copyright-text {
-    padding-top: 5px;
-}
