--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-/* Header.module.css */
+
 
 .header {
     max-width: 900px;
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 20px 50px 20px;
     background-color: transparent;
 }
 
