--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-:root {
-
-}
 
 
 
@@ -11,7 +8,7 @@
 
 body {
  
-  width: 100%;
+  width: 100vw;
   max-width: 1920px;
   margin: 0 auto;
   padding-top: 0px;
@@ -43,7 +40,7 @@ code {
 
 /* Removes default margin, padding, border */
 * {
-  /* margin: 0; */
+  margin: 0;
   padding: 0;
   border: 0;
   vertical-align: baseline;
